--- a/index.html
+++ b/index.html
@@ -1,1 +1,205 @@
-hello it's my library 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="90-Day Cybersecurity Study Plan by Siwar ALWELHAZI" />
+  <title>📘 90-Day Cybersecurity Study Plan</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      line-height: 1.6;
+      padding: 20px;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+    li::before {
+      content: '✅ ';
+      margin-right: 6px;
+    }
+    section {
+      background-color: #fff;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .emoji {
+      font-size: 1.3em;
+      margin-right: 5px;
+    }
+    code {
+      background-color: #eef;
+      padding: 2px 4px;
+      border-radius: 4px;
+      font-family: monospace;
+    }
+    a {
+      color: #2980b9;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>📘 90-Day Cybersecurity Study Plan</h1>
+    <p><strong>Authored by Siwar ALWELHAZI</strong>, Cybersecurity Engineer 🛡️</p>
+  </header>
+
+  <section>
+    <h2>🌟 Introduction</h2>
+    <p>This 90-day study plan is a comprehensive, self-paced roadmap designed to build a robust foundation in cybersecurity. Tailored for beginners and professionals, it offers curated resources and hands-on tasks covering networking, Linux, Python, security principles, SIEM, cloud, ethical hacking, and job readiness.</p>
+  </section>
+
+  <section>
+    <h2>🎯 Goals and Audience</h2>
+    <h3>Goals:</h3>
+    <ul>
+      <li>Establish a strong foundation in cybersecurity concepts.</li>
+      <li>Gain hands-on experience with essential tools.</li>
+      <li>Prepare for CompTIA Network+ and Security+ certifications.</li>
+      <li>Develop skills in scripting, cloud security, and ethical hacking.</li>
+      <li>Build a consistent learning habit.</li>
+    </ul>
+    <h3>Audience:</h3>
+    <ul>
+      <li>Aspiring cybersecurity professionals.</li>
+      <li>IT professionals transitioning into cybersecurity.</li>
+      <li>Students in tech fields.</li>
+      <li>Self-learners.</li>
+      <li>DevOps engineers interested in security.</li>
+      <li>Curious individuals exploring the field.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>🛠️ Essential Cybersecurity Tools</h2>
+    <h3>🌐 Network Analysis</h3>
+    <ul>
+      <li>Wireshark</li>
+      <li>Nmap</li>
+      <li>TCPdump</li>
+    </ul>
+    <h3>🔍 Vulnerability Scanning</h3>
+    <ul>
+      <li>Nessus</li>
+      <li>OpenVAS</li>
+    </ul>
+    <h3>💻 Penetration Testing</h3>
+    <ul>
+      <li>Metasploit</li>
+      <li>Burp Suite</li>
+      <li>Kali Linux</li>
+    </ul>
+    <h3>📊 SIEM</h3>
+    <ul>
+      <li>ELK Stack</li>
+      <li>Splunk</li>
+    </ul>
+    <h3>☁️ Cloud Security</h3>
+    <ul>
+      <li>AWS Security Hub</li>
+      <li>Azure Security Center</li>
+      <li>Google Cloud SCC</li>
+    </ul>
+    <h3>📂 Version Control</h3>
+    <ul>
+      <li>Git, GitHub, GitLab</li>
+    </ul>
+    <h3>🐍 Programming</h3>
+    <ul>
+      <li>Python</li>
+      <li>Bash</li>
+    </ul>
+    <h3>📦 Container Security</h3>
+    <ul>
+      <li>Docker</li>
+      <li>Kubernetes</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>📅 Daily Breakdown</h2>
+    <p><strong>Days 1–7:</strong> Networking Fundamentals (N10-009)</p>
+    <ul>
+      <li>Watch Professor Messer’s N10-009 Playlist</li>
+      <li>Practice questions & exercises</li>
+    </ul>
+
+    <p><strong>Days 8–14:</strong> Security Principles (SY0-701)</p>
+    <ul>
+      <li>Watch SY0-701 Playlists (Messer or Zerger)</li>
+      <li>Practice questions</li>
+    </ul>
+
+    <p><strong>Days 15–28:</strong> Linux Fundamentals</p>
+    <ul>
+      <li>Linux Journey + Cisco Linux Unhatched</li>
+    </ul>
+
+    <p><strong>Days 29–42:</strong> Python Programming</p>
+    <ul>
+      <li>Codecademy, HackerRank challenges, The Cyber Mentor course</li>
+    </ul>
+
+    <p><strong>Days 43–56:</strong> Traffic Analysis</p>
+    <ul>
+      <li>Wireshark tutorials, TCPdump, Suricata on pfSense</li>
+    </ul>
+
+    <p><strong>Days 57–63:</strong> Version Control</p>
+    <ul>
+      <li>Codecademy Git, Git Immersion, Try Git</li>
+    </ul>
+
+    <p><strong>Days 64–70:</strong> ELK Stack</p>
+    <ul>
+      <li>Logz.io & Elastic tutorials</li>
+    </ul>
+
+    <p><strong>Days 71–77:</strong> Cloud Platforms</p>
+    <ul>
+      <li>Choose GCP, AWS, or Azure</li>
+    </ul>
+
+    <p><strong>Days 78–84:</strong> Review</p>
+    <ul>
+      <li>Revisit difficult topics + small projects</li>
+    </ul>
+
+    <p><strong>Days 85–90:</strong> Ethical Hacking</p>
+    <ul>
+      <li>Hack The Box, VulnHub, The Cyber Mentor</li>
+    </ul>
+
+    <p><strong>Days 91–92:</strong> Resume</p>
+    <ul>
+      <li>Build cybersecurity resume</li>
+    </ul>
+
+    <p><strong>Days 93–95:</strong> Job Search</p>
+    <ul>
+      <li>Apply via LinkedIn/Indeed, interview prep</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>👤 About the Author</h2>
+    <p><strong>Siwar ALWELHAZI</strong> is a Cybersecurity Engineer committed to sharing knowledge and empowering others to enter and thrive in the cybersecurity field.</p>
+  </section>
+
+  <footer>
+    <p>🛡️ All rights reserved © 2025 – Siwar ALWELHAZI</p>
+  </footer>
+</body>
+</html>
